# cdsapi

./: .gitignore  Cargo.toml  NOTICE  README.md
examples/: era5_pressure_levels_geopotential.rs
src/: client.rs  config.rs  download.rs  error.rs  legacy.rs  lib.rs  processing.rs  util.rs
